--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
 
     @include('partials/footer.html')
   </div>
+  <script>
+    $('.mask-phone').mask('+7 (999) 999-99-99');
+  </script>
 </body>
 
 </html>
