--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
     @include('partials/footer.html')
   </div>
   <script>
-    $('.mask-phone').mask('+7 (999) 999-99-99');
+    $.mask.definitions['h'] = "[0|1|3|4|5|6|7|9]"
+    $(".mask-phone").mask("+7 (h99) 999-99-99");
   </script>
 </body>
 
